--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,24 @@
 ---
-
+import Layout from "../layouts/Layout.astro";
+import Navigation from "../components/Navigation.astro";
+import Hero from "../components/Hero.astro";
+import Story from "../components/Story.astro";
+import Artists from "../components/Artists.astro";
+import Styles from "../components/Styles.astro";
+import Gallery from "../components/Gallery.astro";
+import Contact from "../components/Contact.astro";
+import Footer from "../components/Footer.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout title="Osadia Tattoo Studio | Santo Domingo">
+  <Navigation />
+  <main>
+    <Hero />
+    <Story />
+    <Styles />
+    <Gallery />
+    <Artists />
+    <Contact />
+  </main>
+  <Footer />
+</Layout>
