--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -12,7 +12,7 @@
     <p class="location">SANTO DOMINGO, ECUADOR</p>
   </div>
 
-  <div class="marquee-container">
+  <div class="marquee-container" aria-hidden="true">
     <div class="marquee">
       <span
         >TINTA &bull; DOLOR &bull; ARTE &bull; OSADIA &bull; TINTA &bull; DOLOR
