--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -4,7 +4,7 @@
 
 <nav class="nav">
   <div class="nav-container">
-    <a href="#" class="logo">OSADIA</a>
+    <a href="/" class="logo">OSADIA</a>
     <div class="menu">
       <a href="#artists" class="menu-item">EL ESTUDIO</a>
       <a href="/portfolio" class="menu-item">PORTAFOLIO</a>
