--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,10 @@ import Contact from "../components/Contact.astro";
 import Footer from "../components/Footer.astro";
 ---
 
-<Layout title="Osadia Tattoo Studio | Santo Domingo">
+<Layout
+  title="Osadia Tattoo Studio | Tatuajes en Santo Domingo, Ecuador"
+  description="El mejor estudio de tatuajes en Santo Domingo. Especialistas en Realismo, Blackwork, Color y diseños personalizados. ¡Agenda tu cita hoy!"
+>
   <Navigation />
   <main>
     <Hero />
