Fix: Phone number - ig link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,15 +13,15 @@ const currentYear = new Date().getFullYear();
       </div>
 
       <div class="social-links">
-        <a href="#" class="social-link">
+        <a href="https://www.instagram.com/osadia_tattoo/" class="social-link">
           <span class="link-text">INSTAGRAM</span>
           <span class="link-arrow">↗</span>
         </a>
-        <a href="#" class="social-link">
+        <a href="https://www.tiktok.com/@osadia_tattoo" class="social-link">
           <span class="link-text">TIKTOK</span>
           <span class="link-arrow">↗</span>
         </a>
-        <a href="#" class="social-link">
+        <a href="https://www.facebook.com/osadia_tattoo" class="social-link">
           <span class="link-text">FACEBOOK</span>
           <span class="link-arrow">↗</span>
         </a>
