nav fix: relaive fix

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,9 +6,9 @@
   <div class="nav-container">
     <a href="/" class="logo">OSADIA</a>
     <div class="menu">
-      <a href="#artists" class="menu-item">EL ESTUDIO</a>
+      <a href="/#artists" class="menu-item">EL ESTUDIO</a>
       <a href="/portfolio" class="menu-item">PORTAFOLIO</a>
-      <a href="#contact" class="menu-item">AGENDA</a>
+      <a href="/#contact" class="menu-item">AGENDA</a>
     </div>
   </div>
 </nav>
