--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,11 +8,14 @@ import Styles from "../components/Styles.astro";
 import Gallery from "../components/Gallery.astro";
 import Contact from "../components/Contact.astro";
 import Footer from "../components/Footer.astro";
+import { seoMeta } from "../data/seoConfig";
 ---
 
 <Layout
-  title="Osadia Tattoo Studio | Tatuajes en Santo Domingo, Ecuador"
-  description="El mejor estudio de tatuajes en Santo Domingo. Especialistas en Realismo, Blackwork, Color y diseños personalizados. ¡Agenda tu cita hoy!"
+  title={seoMeta.home.title}
+  description={seoMeta.home.description}
+  keywords={seoMeta.home.keywords}
+  page="home"
 >
   <Navigation />
   <main>
